更新：修改了 src/popup/popup.html 文件

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -128,7 +128,7 @@
         <label class="section-label">
           <span class="label-icon">✨</span>
           翻译显示模式
-          <span class="help-icon" title="选择翻译内容的显示方式">❓</span>
+          <span class="help-icon" title="选择翻译内容的显示方式"></span>
         </label>
         <div class="mode-options">
           <label class="mode-card">
@@ -136,11 +136,6 @@
             <div class="mode-content">
               <div class="mode-title">
                 双语对照
-                <span class="mode-help-icon" title="原文+译文同时显示，完美阅读体验">❓</span>
-              </div>
-              <div class="mode-preview">
-                <div class="preview-original">Original Text</div>
-                <div class="preview-translated">翻译文本</div>
               </div>
             </div>
           </label>
@@ -150,10 +145,7 @@
             <div class="mode-content">
               <div class="mode-title">
                 直接翻译
-                <span class="mode-help-icon" title="直接替换原文，鼠标悬停显示原文">❓</span>
-              </div>
-              <div class="mode-preview replace">
-                <div class="preview-replaced">翻译文本</div>
+                <span class="mode-help-icon" title="直接替换原文，鼠标悬停显示原文"></span>
               </div>
             </div>
           </label>
